--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      Bienvenido 
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -12,6 +12,9 @@
       <ion-title size="large">Blank</ion-title>
     </ion-toolbar>
   </ion-header>
+
+
+
 
   <div id="container">
     <strong>Ready to create an app?</strong>
