Se ajusta Login y router a Home

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -14,7 +14,15 @@
   </ion-header>
 
 
-
+  <mat-card class="example-card">
+    <mat-card-header>
+      <mat-card-title>Bienvenido</mat-card-title>
+      <mat-card-subtitle> {{ user }}</mat-card-subtitle>
+    </mat-card-header>
+    <mat-card-content>
+      Este es un ejemplo usando Angular Material.
+    </mat-card-content>
+  </mat-card>
 
   <div id="container">
     <strong>Ready to create an app?</strong>
