--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,31 +1,61 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Bienvenido 
-    </ion-title>
+    <ion-title class="titulo-principal">SkeletonAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
 
 
-  <mat-card class="example-card">
+  <mat-card>
     <mat-card-header>
-      <mat-card-title>Bienvenido</mat-card-title>
-      <mat-card-subtitle> {{ user }}</mat-card-subtitle>
+      <mat-card-title>Bienvenido!</mat-card-title>
     </mat-card-header>
     <mat-card-content>
-      Este es un ejemplo usando Angular Material.
+      <p>Usuario: {{ user }}</p>
     </mat-card-content>
   </mat-card>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  
+  <div style="padding: 16px;">
+    <strong>Información Adicional</strong>
+  
+    <mat-form-field appearance="fill" style="width: 100%; margin-top: 10px;">
+      <mat-label>Nombre</mat-label>
+      <input #inputNombre matInput [(ngModel)]="nombre" placeholder="Nombre">
+    </mat-form-field>
+    
+    <mat-form-field appearance="fill" style="width: 100%; margin-top: 10px;">
+      <mat-label>Apellido</mat-label>
+      <input #inputApellido matInput [(ngModel)]="apellido" placeholder="Apellido">
+    </mat-form-field>
+  
+    <mat-form-field appearance="fill" style="width: 100%; margin-top: 10px;">
+      <mat-label>Nivel Educación</mat-label>
+      <mat-select [(ngModel)]="educacion" placeholder="Seleccione Nivel">
+        <mat-option *ngFor="let nivel of nivelesEducacion" [value]="nivel">
+          {{ nivel }}
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  
+    <mat-form-field appearance="fill">
+      <mat-label>Fecha Nacimiento</mat-label>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="nacimiento" placeholder="dd/mm/yyyy">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
+  
+    <div style="text-align: center; margin-top: 20px;">
+      <button mat-raised-button color="warn" (click)="limpiar()">Limpiar</button>
+      <button mat-raised-button color="primary" (click)="mostrar()">Mostrar</button>
+    </div>
   </div>
 </ion-content>
+  <ion-footer>
+    <ion-toolbar color="light">
+      <ion-title class="ion-text-center" size="small">
+        © 2025 SkeletonAPP - Creado por Daniel Alarcón
+      </ion-title>
+    </ion-toolbar>
+  </ion-footer>
+
