--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -13,12 +13,12 @@
     <ion-list>
 
       <ion-item>
-        <ion-label position="floating">Usuario</ion-label>
-        <ion-input [(ngModel)]="email" placeholder ="ejemplo@correo.cl" type="text"></ion-input>
+        <ion-label position="stacked">Usuario</ion-label>
+        <ion-input [(ngModel)]="user" placeholder ="nombre" type="text"></ion-input>
       </ion-item>
 
       <ion-item>
-        <ion-label position="floating">Password</ion-label>
+        <ion-label position="stacked">Password</ion-label>
         <ion-input [(ngModel)]="password" placeholder ="●●●●" type="password" style="padding-top: 10px;"></ion-input>
       </ion-item>
 
