Agregados estilos a home
Corrección de animaciones en home y estilos css.

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -21,3 +21,82 @@
     opacity: 1;
   }
 }
+
+
+ion-card {
+  --background: #f0f4ff85; /* Un azul claro suave, puedes cambiarlo */
+  align-items: center;
+  justify-content: center;
+  height: 90%;
+  padding: 0 16px; /* Espacio alrededor del contenido */
+  font-family: 'Arial', sans-serif; /* Fuente más amigable */
+  color: #333; /* Color de texto más oscuro para mejor contraste */
+  text-align: center; /* Centrar el texto */
+  box-sizing: border-box; /* Asegura que el padding no afecte al tamaño total */
+  border-radius: 30px; /* Bordes redondeados */
+}
+
+ion-content {
+  --background: #2c417c; /* Un azul claro suave, puedes cambiarlo */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+  padding: 0 16px; /* Espacio alrededor del contenido */
+  font-family: 'Arial', sans-serif; /* Fuente más amigable */
+  color: #333; /* Color de texto más oscuro para mejor contraste */
+  text-align: center; /* Centrar el texto */
+  box-sizing: border-box; /* Asegura que el padding no afecte al tamaño total */
+}
+
+mat-card-header {
+  padding: auto;
+  align-self: center;
+}
+
+mat-card {
+  background-color: #4664a52c;
+  border-radius: 20px;
+  margin-top: 10px;
+}
+
+
+
+@keyframes slideRight {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(20px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+.animar-slide {
+  animation: slideRight 1s ease-in-out;
+}
+
+
+.nombreInput, .apellidoInput {
+  margin-top: 16px;
+  margin-bottom: 10px;
+  padding: 3px;
+  padding-left: 12px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  background-color: #c4c6d266;
+  text-align: left;
+  color: #000000; 
+  font-size: 16px;
+  transition: border-color 0.3s, box-shadow 0.3s;
+}
+
+.nombreInput:hover, .apellidoInput:hover {
+  
+  background-color: #c5c8d4;
+  box-shadow: 0 0 5px rgba(70, 100, 165, 0.979); /* sombra sutil */
+}
+
