--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,23 @@
 <ion-app>
-  <ion-router-outlet></ion-router-outlet>
+  <ion-menu contentId="main-content">
+    <ion-header>
+    <ion-toolbar color="secondary">
+      <ion-title>Menú</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <ion-item routerLink="/home" routerDirection="root">
+        <ion-icon slot="start" name="home"></ion-icon>
+        <ion-label>Inicio</ion-label>
+      </ion-item>
+      <ion-item routerLink="/login" routerDirection="root">
+        <ion-icon slot="start" name="log-in-outline"></ion-icon>
+        <ion-label>Login</ion-label>
+      </ion-item>
+    </ion-list>
+  </ion-content>
+
+  </ion-menu>
+  <ion-router-outlet id="main-content"></ion-router-outlet>
 </ion-app>
