--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,13 +1,18 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button></ion-buttons>
     <ion-title class="titulo-principal">SkeletonAPP</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+
+<ion-content [fullscreen]="true" class="ion-padding">
 
 
-  <mat-card>
+<ion-card color="light">
+
+  <mat-card class="ion-padding" color="primary" style="padding-top: 20px;">
     <mat-card-header>
       <mat-card-title>Bienvenido!</mat-card-title>
     </mat-card-header>
@@ -18,19 +23,19 @@
   
   <div style="padding: 16px;">
     <strong>Información Adicional</strong>
-  
-    <mat-form-field appearance="fill" style="width: 100%; margin-top: 10px;">
-      <mat-label>Nombre</mat-label>
-      <input #inputNombre matInput [(ngModel)]="nombre" placeholder="Nombre">
-    </mat-form-field>
+
+    <div #nombreField class="nombreInput">
+      <ion-label>Nombre</ion-label>
+      <ion-input [(ngModel)]="nombre" placeholder=""></ion-input>
+    </div>
+    <div #apellidoField class="apellidoInput">
+      <ion-label>Apellido</ion-label>
+      <ion-input [(ngModel)]="apellido" placeholder=""></ion-input>
+    </div>
     
-    <mat-form-field appearance="fill" style="width: 100%; margin-top: 10px;">
-      <mat-label>Apellido</mat-label>
-      <input #inputApellido matInput [(ngModel)]="apellido" placeholder="Apellido">
-    </mat-form-field>
   
     <mat-form-field appearance="fill" style="width: 100%; margin-top: 10px;">
-      <mat-label>Nivel Educación</mat-label>
+      <mat-label>Nivel de Educación</mat-label>
       <mat-select [(ngModel)]="educacion" placeholder="Seleccione Nivel">
         <mat-option *ngFor="let nivel of nivelesEducacion" [value]="nivel">
           {{ nivel }}
@@ -39,18 +44,24 @@
     </mat-form-field>
   
     <mat-form-field appearance="fill">
-      <mat-label>Fecha Nacimiento</mat-label>
+      <mat-label>Fecha de Nacimiento</mat-label>
       <input matInput [matDatepicker]="picker" [(ngModel)]="nacimiento" placeholder="dd/mm/yyyy">
       <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
       <mat-datepicker #picker></mat-datepicker>
     </mat-form-field>
   
-    <div style="text-align: center; margin-top: 20px;">
+
+    <div >
       <button mat-raised-button color="warn" (click)="limpiar()">Limpiar</button>
-      <button mat-raised-button color="primary" (click)="mostrar()">Mostrar</button>
+      <button mat-raised-button color="warn" (click)="mostrar()">Mostrar</button>
     </div>
   </div>
+</ion-card>
+
 </ion-content>
+
+
+
   <ion-footer>
     <ion-toolbar color="light">
       <ion-title class="ion-text-center" size="small">
